--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
   <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
   <script async defer src="https://buttons.github.io/buttons.js"></script>
+
+  <!-- Sweetalert2 추가 -->
+  <script src="./node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
+  <link rel="stylesheet" href="./node_modules/sweetalert2/dist/sweetalert2.min.css">
 </head>
 
 <body class="bg-gray-100">
